--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,8 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 # Jetbrains Dokka
 org.jetbrains.dokka.experimental.gradle.pluginMode.nowarn=true
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+kotlin.js.yarn=true
+kotlin.js.npm=true
 # Jetbrains Compose
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.macos.enabled=true
