--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: CodeQL
+name: CodeQL - Code Analysis
 
 on:
   push:
@@ -24,11 +24,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
-      - name: Set up JDK
+      # Setup JDK 21 to build properly
+      - name: set up JDK 21
         uses: actions/setup-java@v5
         with:
-          distribution: 'temurin'
-          java-version: '21'
+          java-version: 21
+          distribution: temurin
+          cache: gradle
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
@@ -37,7 +39,7 @@ jobs:
 
       - name: Build JVM / Android targets
         run: |
-          ./gradlew :lumber:build -x test --no-daemon
+          ./gradlew :lumber:build -x allTests --no-daemon
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
