--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,19 +10,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  security-events: write
+  contents: read
+
 jobs:
   analyze:
-    name: Analyze (${{ matrix.language }})
+    name: Analyze Java-Kotlin
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java-kotlin' ]
-
-    permissions:
-      security-events: write
-      contents: read
 
     steps:
       - name: Checkout
@@ -40,38 +35,14 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
-      # Kotlin compiler
-      - name: Cache Kotlin compiler
-        uses: actions/cache@v4
-        with:
-          path: ~/.gradle/kotlin
-          key: ${{ runner.os }}-gradle-kotlin-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle-kotlin-
-
-      # Cache Konan (Kotlin/Native)
-      - name: Cache Konan
-        uses: actions/cache@v4
-        with:
-          path: ~/.konan
-          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-konan-
-
-      # Cache npm (for JS/WASM builds)
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package.json') }}
-          restore-keys: ${{ runner.os }}-npm-
-
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
-          languages: ${{ matrix.language }}
+          languages: java-kotlin
 
       - name: Build JVM / Android targets
         run: |
-          ./gradlew :lumber:build -x allTests --no-daemon
+          ./gradlew build -x allTests
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
