--- a/gradle.properties
+++ b/gradle.properties
@@ -32,18 +32,31 @@ org.jetbrains.compose.experimental.uikit.enabled=true
 #
 # ----------- PUBLISHING CONFIG --------------
 GROUP=io.github.matheus-corregiari
-ARTIFACT_ID=arch-lumber
+POM_ARTIFACT_ID=arch-lumber
+REPO_MAVEN_URL=https://maven.pkg.github.com/matheus-corregiari/arch-lumber
 # POM
-NAME=Arch Lumber
-DESCRIPTION=Type-safe, multiplatform logging for Kotlin - inspired by Timber, built for KMP.
-REPO_URL=https://github.com/matheus-corregiari/arch-lumber
-REPO_GIT_URL=https://github.com/matheus-corregiari/arch-lumber.git
-DEV_URL=https://github.com/matheus-corregiari
-LICENCE_NAME=The Apache Software License, Version 2.0
-LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0
-LICENCE_DIST=repo
+POM_NAME=Arch Lumber
+POM_DESCRIPTION=Type-safe, multiplatform logging for Kotlin - inspired by Timber, built for KMP.
+POM_URL=https://github.com/matheus-corregiari/arch-lumber
+POM_INCEPTION_YEAR=2025
+# POM Issue Management
+POM_ISSUE_SYSTEM=Github
+POM_ISSUE_URL=https://github.com/matheus-corregiari/arch-lumber/issues
+# POM SCM
+POM_SCM_URL=https://github.com/matheus-corregiari/arch-lumber
+POM_SCM_CONNECTION=scm:git:https://github.com/matheus-corregiari/arch-lumber.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com:matheus-corregiari/arch-lumber.git
+# POM License
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0
+POM_LICENSE_DIST=repo
+# POM Developer
+POM_DEVELOPER_ID=melete
+POM_DEVELOPER_NAME=Melete
+POM_DEVELOPER_URL=https://github.com/matheus-corregiari
+POM_DEVELOPER_EMAIL=melete@notValidEmail.com
 # Upload signing
-signing.secretKeyRingFile=public_key_matheus_secret.gpg
+signing.secretKeyRingFile=tools/sign_private.gpg
 # Timeout
 SONATYPE_CONNECT_TIMEOUT_SECONDS=120
 SONATYPE_CLOSE_TIMEOUT_SECONDS=2700
