--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,18 +22,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-
-      # Setup JDK 21 to build properly
-      - name: set up JDK 21
-        uses: actions/setup-java@v5
-        with:
-          java-version: 21
-          distribution: temurin
-          cache: gradle
-
-      # Setup Gradle because without it, nothing happens
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v5
+      - name: Setup
+        uses: ./.github/actions/setup-gradle
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
@@ -42,10 +32,7 @@ jobs:
           build-mode: manual
 
       - name: Build JVM / Android targets
-        env:
-          CODEQL_EXTRACTOR_JAVA_AGENT_DISABLE_KOTLIN: "true"
-        run: |
-          ./gradlew build -x allTests
+        run: ./gradlew build -x allTests
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
