--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,10 @@ org.gradle.configuration-cache=false
 # Kotlin
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+# Kotlin Atomic
+kotlinx.atomicfu.enableJvmIrTransformation=true
+kotlinx.atomicfu.enableNativeIrTransformation=true
+kotlinx.atomicfu.enableJsIrTransformation=true
 # Jetbrains Dokka
 org.jetbrains.dokka.experimental.gradle.pluginMode.nowarn=true
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
